Criação da Tela usuario e alteração em algumas telas